# bevy-wasm-gallery

./: .envrc  .gitignore  Cargo.toml  README.md  bevy_wasm_gallery.d.ts  bevy_wasm_gallery.js  bevy_wasm_gallery_bg.wasm.d.ts  build-wasm.sh  debug-build-wasm.sh  flake.nix  index.html  result  rust-toolchain.toml
.github/workflows/: bevy.yml
src/: gallary.rs  lib.rs  log.rs
