[package]
name = "bevy-wasm-gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.12", features = ["js"] }
bevy = "0.15.3"
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

